<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_75_days_of_android_dev_challenge"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:layout_marginBottom="30sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20sp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_margin="10sp"
                />
            <EditText
                android:id="@+id/inputname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:layout_margin="10sp"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20sp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_margin="8sp"
                />
            <EditText
                android:id="@+id/inputphone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="number"
                android:hint="@string/enter_your_phone"
                android:layout_margin="8sp"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20sp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_margin="10sp"
                />
            <RadioGroup
                android:id="@+id/radiogrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="18sp"
                    android:layout_marginHorizontal="10sp"
                    android:textColor="@color/black"
                    />
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20sp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobbies"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_margin="10sp"
                />
            <CheckBox
                android:id="@+id/dance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/dancing"
                android:textSize="18sp"
                android:textColor="@color/black"
                />
            <CheckBox
                android:id="@+id/sing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/singing"
                android:textSize="18sp"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            />
    </LinearLayout>
</LinearLayout>